methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to 7) {
         ^