methods.slug.SlugTracking.scala.code
var booleen : Boolean = false
def isFacingTrail():Boolean = {
  for (i <- 1 to 7) {
    avance();
    if (estFaceMur) {
      return booleen
    }
    if (getCouleurSol() == Color.green)
    {avance();}
    return !booleen
  }
}






